--- a/index.html
+++ b/index.html
@@ -861,7 +861,7 @@
             <br/>
             <ul>
             <li>Project Health's video editor and designer.</li>
-            <li>Is passionate about finance, aspires to work at an iBank</li>
+            <li>Is passionate about Economics, aspires to work at an iBank</li>
             <li>A mathematical talent unconditionally accepted to Cambridge 1 year in advance to major in Economics.</li>
             </ul>
             <br/>
@@ -907,52 +907,221 @@
 
 
 <div data-role="page" id="info"> <!-- JEFFREY -->
-        <div data-role="header">
-            <div class="icon-bar">
-                <a href="#home"><i class="fa fa-home"></i></a>
-                <a href="#address"><i class="fa fa-address-book"></i></a>
-                <a href="#tips"><i class="fa fa-lightbulb-o"></i></a>
-                <a class = "active" href="#info"><i class="fa fa-question-circle"></i></a>
-            </div>
-        </div>
-        <div role="main" class="ui-content">
-            <h1> <span style="color: #59B3C2;">About Melanoma</span></h1>
-            <hr/>
-            <p> <strong>Q?</strong> </p> 
-<br/>
-<p>A</p>
-<br/>
-            <p> <strong>Q?</strong> </p> 
-<br/>
-<p>A</p>
-<br/>
-<p><strong>Q?</strong></p>
-<br/>
-<p>A</p>
-<br/>
-<p><strong>Q?</strong></p>
-<br/>
-<p>A</p>
-<p><strong>Q?</strong></p>
-<br/>
-<p>A</p>
-</div>
-        <div data-role="footer">
-            <a href="#TOS" data-role="button" data-transition="flip" class="button2">Terms of Service</a>
-            <a href="#PP" data-role="button" data-transition="flip" class="button2">Privacy Policy</a>
-            <a href="#contact" data-role="button" data-transition="flip" class="button2">Contact Us</a>
-             
-            <a href="#credits" data-role="button" data-transition="flip" class="button2">Credits</a>
-            <form class="form2" action="https://formspree.io/projecthealthdgs@gmail.com" method="POST">
-                <input name="name2" class="newsletter" placeholder="Full Name" type="text" required/>
-                <br/>
-                <input name="name2" class="newsletter" placeholder="Email" type="email" required/>
-                <button id="subscribe" type="submit">Subscribe for Healthy Living Tips </button>
-            </form>
-            <p id="c"> © 2019 Team Asclepius. All rights reserved. </p>
-        </div>
+  <div data-role="header">
+    <div class="icon-bar">
+      <a href="#home"><i class="fa fa-home"></i></a>
+      <a href="#address"><i class="fa fa-address-book"></i></a>
+      <a href="#tips"><i class="fa fa-lightbulb-o"></i></a>
+      <a class = "active" href="#info"><i class="fa fa-question-circle"></i></a>
     </div>
-</body>
+  </div>
+  <div role="main" class="ui-content">
+    <h1> <span style="color: #59B3C2;">Health Concerns</span></h1>
+    <hr/>
+
+    <p><strong>1. Alzheimer’s disease</strong> </p> 
+    <br>
+    <p>What is Alzheimer’s disease?</p>
+    <p>A progressive form of dementia, which refers to conditions that negatively affect memory, thinking and behaviour.</p>
+    <br>
+    <p>What causes Alzheimer’s disease?</p>
+    <p>The main factors contributing to this disease can be age, as it usually affects those over 65 years old, and family history.</p>
+    <br>
+    <p>What are some symptoms of Alzheimer’s disease?</p>
+    <p>These symptoms come on gradually and have degenerative effects on the brain. Symptoms in the early stages can include forgetfulness, mild mental and physical impairments, such as reduced memory and concentration. In the later stages, there might be depression, restlessness, aggression, agitation or hallucinations. </p>
+    <br>
+    <p>How can I prevent contracting Alzheimer’s disease?</p>
+    <p>Although there are no foolproof preventive measures, some might be quitting smoking, regular exercise and consuming a plant-based diet with more antioxidants.</p>
+    <br>
+    <p>I have Alzheimer’s disease, what do I do?</p>
+    <p>For early to moderate Alzheimer’s, medications which can help maintain high levels of acetylcholine, which is a type of neurotransmitter to aid your memory, in your brain may be prescribed. Some examples are donepezil or rivastigmine. For moderate to severe stages, memantine could be prescribed, as it blocks the effects of excess glutamate, which damages brain cells. </p>
+    <br>
+
+
+    <p> <strong>2. Arthritis</strong> </p>
+    <br> 
+    <p>What is arthritis?</p>
+    <p>A disease that causes joint pain.</p>
+    <br>
+    <p>What causes arthritis?</p>
+    <p>Infection or joint injury can exacerbate this natural breakdown of cartilage tissue (firm but flexible connective tissue in your joints), or if there is family history concerning the disease.</p>
+    <br>
+    <p>What are some symptoms of arthritis?</p>
+    <p>Swelling, pain, stiffness and decreased range of motion.</p>
+    <br>
+    <p>How can I prevent contracting arthritis?</p>
+    <p>Weight loss and maintaining a healthy weight can reduce the risk.</p>
+    <br>
+    <p>I have arthritis, what do I do?</p>
+    <p>There are a number of different types of medication treat arthritis: Analgesics, nonsteroidal anti-inflammatory drugs (NSAIDs), menthol or capsaicin creams, immunosuppressants.</p>
+    <br>
+
+
+    <p><strong>3. Arrhythmias</strong> </p> 
+    <br>
+    <p>What is arrhythmias?</p>
+    <p>It is a type of heart disease that means abnormal heart rhythms -- heartbeats can be too fast or too slow.</p>
+    <br>
+    <p>What causes arrhythmia?</p>
+    <p>Causes can include diabetes, high blood pressure or excessive alcohol or caffeine use.</p>
+    <br>
+    <p>What are some symptoms of arrhythmia?</p>
+    <p>Can include lightheadedness, fluttering heart or racing heartbeat.</p>
+    <br>
+    <p>How can I prevent contracting arrhythmia?</p>
+    <p>If the arrhythmia is long-term, avoid smoking, drinking and use of illegal drugs.</p>
+    <br>
+    <p>I have arrhythmia, what do I do?</p>
+    <p>AIt might be helpful to take nutritional supplements such as fish oil for omega-3 fatty acids, which reduce the risk of sudden cardiac death./p>
+    <br>
+
+
+    <p><strong>4. Atherosclerosis</strong> </p> 
+    <br>
+    <p>What is atherosclerosis?</p>
+    <p>It is a type of heart disease that reduces blood supply to your extremities.</p>
+    <br>
+    <p>What causes atherosclerosis?</p>
+    <p>Causes usually lead to hardening of the arteries and can include high cholesterol and an unhealthy diet.</p>
+    <br>
+    <p>What are some symptoms of atherosclerosis?</p>
+    <p>Symptoms can include chest pain and shortness of breath.</p>
+    <br>
+    <p>How can I prevent contracting atherosclerosis?</p>
+    <p>By eating a healthy diet and avoiding foods high in sugar, salt and fat. </p>
+    <br>
+    <p>I have atherosclerosis, what do I do?</p>
+    <p>Medications to prevent the condition from worsening can include cholesterol-lowering medications, ACE inhibitors or beta blockers. </p>
+    <br>
+
+    <p><strong>5. Cardiomyopathy</strong> </p> 
+    <br>
+    <p>What is cardiomyopathy?</p>
+    <p>A disease that causes the muscles of the heart to grow larger and turn rigid, thick or weak.</p>
+    <br>
+    <p>What causes cardiomyopathy?</p>
+    <p>Different types of cardiomyopathy are caused by different conditions, which can include inheritance for hypertrophic types, which leads to a thicker heart muscle) or scar tissue buildup for restrictive types, which leads to rigid heart walls.</p>
+    <br>
+    <p>What are some symptoms of cardiomyopathy?</p>
+    <p>Symptoms can include fatigue, bloating, swollen legs or shortness of breath.</p>
+    <br>
+    <p>How can I prevent contracting cardiomyopathy?</p>
+    <p>Ways of prevention can include changing your lifestyle to one that is heart-healthy, by maintaining a healthy weight and limiting caffeine taking.</p>
+    <br>
+    <p>I have cardiomyopathy, what do I do?</p>
+    <p>Medications can include those used to treat high blood pressure or prevent water retention, and can include ACE (Angiotensin-converting enzyme ) inhibitors and beta blockers. </p>
+    <br>
+
+
+
+    <p><strong>6. Coronary artery disease</strong> </p> 
+    <br>
+    <p>What is coronary artery disease?</p>
+    <p>It is a type of heart disease that means plaque is built up in the arteries that move oxygen-rich blood through the heart and lungs.</p>
+    <br>
+    <p>What causes coronary artery disease?</p>
+    <p>Can include high blood pressure or blood cholesterol levels, obesity and inactivity.</p>
+    <br>
+    <p>What are some symptoms of coronary artery disease?</p>
+    <p>Can include chest discomfort, shortness of breath and nausea.</p>
+    <br>
+    <p>How can I prevent contracting coronary artery disease?</p>
+    <p>Exercise and adopt healthier eating habits, as well as sleeping regularly and for long periods of time.</p>
+    <br>
+    <p>I have coronary artery disease, what do I do?</p>
+    <p>Medications can include beta blockers, aspirin and cholesterol-modifying medications.</p>
+    <br>
+    
+    <p><strong>7. Osteoporosis</strong> </p> 
+    <br>
+    <p>What is osteoporosis?</p>
+    <p>Bone disease which leads to a higher risk of fractures.</p>
+    <br>
+    <p>What causes osteoporosis?</p>
+    <p>Most cases of osteoporosis are due to old age or menopause. The disease is also more likely to affect women and those with low body weight or small boned frame.</p>
+    <br>
+    <p>What are some symptoms of osteoporosis?</p>
+    <p>Symptoms can include receding gums, weakened grip strength and weak or brittle nails.</p>
+    <br>
+    <p>How can I prevent contracting osteoporosis?</p>
+    <p>Increasing intake of calcium and vitamin D, as well as exercising more, especially by doing weight-bearing exercises, can help protect and strengthen the bones.</p>
+    <br>
+    <p>I have osteoporosis, what do I do?</p>
+    <p>The most common types of medications used are bisphosphonates, which can prevent the loss of bone mass. Other medications may be used to prevent bone loss or stimulate bone growth, and can include testosterone, hormone therapy, or raloxifene.</p>
+    <br>
+
+
+    <p><strong>8. Parkinson’s disease</strong> </p> 
+    <br>
+    <p>What is Parkinson’s disease?</p>
+    <p>It is a progressive neurological disorder.</p>
+    <br>
+    <p>What causes Parkinson’s disease?</p>
+    <p>It is thought to have both genetic and environmental components.</p>
+    <br>
+    <p>What are some symptoms of Parkinson’s disease?</p>
+    <p>Symptoms can include problems with movement (tremor, slow movements, stiffness of arms, legs and trunk, as well as problems with balance)</p>
+    <br>
+    <p>How can I prevent contracting Parkinson’s disease?</p>
+    <p>Take adequate rest, exercise frequently and have a balanced diet.</p>
+    <br>
+    <p>I have Parkinson’s disease, what do I do?</p>
+    <p>Medication needed for Parkinson’s can be levodopa (to replenish dopamine) or COMT inhibitors, which prolong the effect of levodopa.</p>
+    <br>
+
+
+    <p><strong>9. Type 1 Diabetes</strong> </p> 
+    <br>
+    <p>What is diabetes?</p>
+    <p>Diabetes is a metabolic disease that causes high blood sugar and this type is an autoimmune disease.</p>
+    <br>
+    <p>What causes diabetes?</p>
+    <p>No one is sure what causes type 1 diabetes, as the immune system mistakenly attacks and destroys insulin-producing beta cells in the pancreas.</p>
+    <br>
+    <p>What are some symptoms of diabetes?</p>
+    <p>Symptoms are caused by rising blood sugar, and can include increased hunger or thirst, weight loss and frequent urination.</p>
+    <br>
+    <p>How can I prevent contracting diabetes?</p>
+    <p>Type 1 diabetes is not preventable as it is a problem with the immune system.</p>
+    <br>
+    <p>I have diabetes, what do I do?</p>
+    <p>Insulin is the main treatment and replaces the hormone the body can’t produce. </p>
+    <br>
+
+
+    <p><strong>10. Type 2 Diabetes</strong> </p> 
+    <br>
+    <p>What is diabetes?</p>
+    <p>Diabetes is a metabolic disease that causes high blood sugar and this type which is when the body becomes resistant to insulin and sugar builds up in the blood.</p>
+    <br>
+    <p>What causes diabetes?</p>
+    <p>Usually because the body doesn’t make enough insulin or can’t effectively use the insulin it does make. Factors that increase risk can include genetics or obesity.</p>
+    <br>
+    <p>What are some symptoms of diabetes?</p>
+    <p>Symptoms are caused by rising blood sugar, and can include increased hunger or thirst, weight loss and frequent urination.</p>
+    <br>
+    <p>How can I prevent contracting diabetes?</p>
+    <p>Type 2 diabetes can be somewhat controlled by lifestyle changes to diet and exercise, such as by eating smaller portions and cutting out saturated and trans fat, or by doing more aerobic exercise weekly.</p>
+    <br>
+    <p>I have diabetes, what do I do?</p>
+    <p>Various types of drug, including alpha-glucosidase inhibitors or biguanides, can treat this type of diabetes.</p>
+    <br>
+
+  </div>
+  <div data-role="footer">
+    <a href="#TOS" data-role="button" data-transition="flip" class="button2">Terms of Service</a>
+    <a href="#PP" data-role="button" data-transition="flip" class="button2">Privacy Policy</a>
+    <a href="#contact" data-role="button" data-transition="flip" class="button2">Contact Us</a>
+    <a href="#credits" data-role="button" data-transition="flip" class="button2">Credits</a>
+    <form class="form2" action="https://formspree.io/projecthealthdgs@gmail.com" method="POST">
+      <input name="name2" class="newsletter" placeholder="Full Name" type="text" required/>
+      <br/>
+      <input name="name2" class="newsletter" placeholder="Email" type="email" required/>
+      <button id="subscribe" type="submit">Subscribe for Healthy Living Tips </button>
+    </form>
+    <p id="c"> © 2019 Team Asclepius. All rights reserved. </p>
+  </div>
+</div>
 
 
    <div data-role="page" id="contact">
