--- a/index.html
+++ b/index.html
@@ -919,7 +919,7 @@
     <h1> <span style="color: #59B3C2;">Health Concerns</span></h1>
     <hr/>
 
-    <p><strong>1. Alzheimer’s disease</strong> </p> 
+    <h3>1. Alzheimer’s disease</h3>
     <br>
     <p>What is Alzheimer’s disease?</p>
     <p>A progressive form of dementia, which refers to conditions that negatively affect memory, thinking and behaviour.</p>
@@ -935,10 +935,11 @@
     <br>
     <p>I have Alzheimer’s disease, what do I do?</p>
     <p>For early to moderate Alzheimer’s, medications which can help maintain high levels of acetylcholine, which is a type of neurotransmitter to aid your memory, in your brain may be prescribed. Some examples are donepezil or rivastigmine. For moderate to severe stages, memantine could be prescribed, as it blocks the effects of excess glutamate, which damages brain cells. </p>
+    <hr/>
     <br>
 
 
-    <p> <strong>2. Arthritis</strong> </p>
+    <p> <strong>2. Arthritis</h3> 
     <br> 
     <p>What is arthritis?</p>
     <p>A disease that causes joint pain.</p>
@@ -954,10 +955,11 @@
     <br>
     <p>I have arthritis, what do I do?</p>
     <p>There are a number of different types of medication treat arthritis: Analgesics, nonsteroidal anti-inflammatory drugs (NSAIDs), menthol or capsaicin creams, immunosuppressants.</p>
+    <hr/>
     <br>
 
 
-    <p><strong>3. Arrhythmias</strong> </p> 
+    <h3>3. Arrhythmias</h3> 
     <br>
     <p>What is arrhythmias?</p>
     <p>It is a type of heart disease that means abnormal heart rhythms -- heartbeats can be too fast or too slow.</p>
@@ -973,10 +975,11 @@
     <br>
     <p>I have arrhythmia, what do I do?</p>
     <p>AIt might be helpful to take nutritional supplements such as fish oil for omega-3 fatty acids, which reduce the risk of sudden cardiac death./p>
+    <hr/>
     <br>
 
 
-    <p><strong>4. Atherosclerosis</strong> </p> 
+    <h3>4. Atherosclerosis</h3> 
     <br>
     <p>What is atherosclerosis?</p>
     <p>It is a type of heart disease that reduces blood supply to your extremities.</p>
@@ -992,9 +995,10 @@
     <br>
     <p>I have atherosclerosis, what do I do?</p>
     <p>Medications to prevent the condition from worsening can include cholesterol-lowering medications, ACE inhibitors or beta blockers. </p>
+    <hr/>
     <br>
 
-    <p><strong>5. Cardiomyopathy</strong> </p> 
+    <h3>5. Cardiomyopathy</h3> 
     <br>
     <p>What is cardiomyopathy?</p>
     <p>A disease that causes the muscles of the heart to grow larger and turn rigid, thick or weak.</p>
@@ -1010,11 +1014,12 @@
     <br>
     <p>I have cardiomyopathy, what do I do?</p>
     <p>Medications can include those used to treat high blood pressure or prevent water retention, and can include ACE (Angiotensin-converting enzyme ) inhibitors and beta blockers. </p>
+    <hr/>
     <br>
 
 
 
-    <p><strong>6. Coronary artery disease</strong> </p> 
+    <h3>6. Coronary artery disease</h3> 
     <br>
     <p>What is coronary artery disease?</p>
     <p>It is a type of heart disease that means plaque is built up in the arteries that move oxygen-rich blood through the heart and lungs.</p>
@@ -1030,9 +1035,10 @@
     <br>
     <p>I have coronary artery disease, what do I do?</p>
     <p>Medications can include beta blockers, aspirin and cholesterol-modifying medications.</p>
+    <hr/>
     <br>
     
-    <p><strong>7. Osteoporosis</strong> </p> 
+    <h3>7. Osteoporosis</h3> 
     <br>
     <p>What is osteoporosis?</p>
     <p>Bone disease which leads to a higher risk of fractures.</p>
@@ -1048,10 +1054,11 @@
     <br>
     <p>I have osteoporosis, what do I do?</p>
     <p>The most common types of medications used are bisphosphonates, which can prevent the loss of bone mass. Other medications may be used to prevent bone loss or stimulate bone growth, and can include testosterone, hormone therapy, or raloxifene.</p>
+    <hr/>    
     <br>
 
 
-    <p><strong>8. Parkinson’s disease</strong> </p> 
+    <h3>8. Parkinson’s disease</h3>  
     <br>
     <p>What is Parkinson’s disease?</p>
     <p>It is a progressive neurological disorder.</p>
@@ -1067,10 +1074,11 @@
     <br>
     <p>I have Parkinson’s disease, what do I do?</p>
     <p>Medication needed for Parkinson’s can be levodopa (to replenish dopamine) or COMT inhibitors, which prolong the effect of levodopa.</p>
+    <hr/>    
     <br>
 
 
-    <p><strong>9. Type 1 Diabetes</strong> </p> 
+    <h3>9. Type 1 Diabetes</h3> 
     <br>
     <p>What is diabetes?</p>
     <p>Diabetes is a metabolic disease that causes high blood sugar and this type is an autoimmune disease.</p>
@@ -1086,10 +1094,11 @@
     <br>
     <p>I have diabetes, what do I do?</p>
     <p>Insulin is the main treatment and replaces the hormone the body can’t produce. </p>
+    <hr/>
     <br>
 
 
-    <p><strong>10. Type 2 Diabetes</strong> </p> 
+    <h3>10. Type 2 Diabetes</h3> 
     <br>
     <p>What is diabetes?</p>
     <p>Diabetes is a metabolic disease that causes high blood sugar and this type which is when the body becomes resistant to insulin and sugar builds up in the blood.</p>
@@ -1105,6 +1114,7 @@
     <br>
     <p>I have diabetes, what do I do?</p>
     <p>Various types of drug, including alpha-glucosidase inhibitors or biguanides, can treat this type of diabetes.</p>
+    <hr/>
     <br>
 
   </div>
