--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
   <div data-role="header">
     <div class="icon-bar">
       <a href="#home"><i class="fa fa-home"></i></a>
-      <a href="#address"><i class="fa fa-address-book"></i></a>
+      <a class="active" href="#address"><i class="fa fa-address-book"></i></a>
       <a href="#tips"><i class="fa fa-lightbulb-o"></i></a>
       <a href="#info"><i class="fa fa-question-circle"></i></a>
     </div>
@@ -939,7 +939,7 @@
     <br>
 
 
-    <p> <strong>2. Arthritis</h3> 
+    <h3>2. Arthritis</h3> 
     <br> 
     <p>What is arthritis?</p>
     <p>A disease that causes joint pain.</p>
