--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
+<!-- This script can be run locally -->
 
-<!-- ctrl-f JEFFREY -->
-<!-- ?? tags, email, ids -->
 
 <!DOCTYPE html>
 <html>
@@ -457,7 +456,6 @@
         @media screen and (max-width: 290px) {
           .weekdays li, .days li {width: 12.2%;}
         }
-        /* Styling for alert JEFFREY*/ 
         #confirm {
             display: none;
             background-color: #F3F5F6;
@@ -496,20 +494,20 @@
         }
 
         .modal {
-            display: none; /* Hidden by default */
-            position: fixed; /* Stay in place */
-            z-index: 1; /* Sit on top */
-            padding-top: 100px; /* Location of the box */
+            display: none; 
+            position: fixed; 
+            z-index: 1; 
+            padding-top: 100px; 
             left: 0;
             top: 0;
-            width: 100%; /* Full width */
-            height: 100%; /* Full height */
-            overflow: auto; /* Enable scroll if needed */
-            background-color: rgb(0,0,0); /* Fallback color */
-            background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+            width: 100%;
+            height: 100%; 
+            overflow: auto; 
+            background-color: rgb(0,0,0); 
+            background-color: rgba(0,0,0,0.9); 
           }
 
-          /* Modal Content (image) */
+          /* Modal Content */
           .modal-content {
             margin: auto;
             display: block;
@@ -529,7 +527,6 @@
             height: 150px;
           }
 
-          /* Add Animation */
           .modal-content, #caption {  
             -webkit-animation-name: zoom;
             -webkit-animation-duration: 0.6s;
@@ -586,7 +583,7 @@
             </div>
         </div>
         <div role="main" class="ui-content" align="center">
-            <strong><h2 id="p2">Project Health</h2></strong>
+            <strong><h2 id="p2">Health++</h2></strong>
             <a href="#LearnMore" data-transition="flip">
                 <img src="https://i.imgur.com/NgR0PdH.jpg" class="front-pic"/>
             </a>
@@ -624,10 +621,9 @@
               }
             </script>
             <p><a href="#schedule" data-role="button" data-transition="flip" class="button1">My Schedule</a></p> 
-            <a href="tel:66933969" class="button1 ui-link" id="shut"><i class="fa fa-phone"></i> EMERGENCY CALL</a>
+            <a href="tel:25470766" class="button1 ui-link" id="shut"><i class="fa fa-phone"></i> EMERGENCY CALL</a>
                 <script>
-                // SET DATE TIME JEFFREY
-                var countDownDate = new Date("Jan 18, 2019 17:00:00").getTime();
+                var countDownDate = new Date("Jan 18, 2020 17:00:00").getTime();
                 // Update the count down every 1 second
                 var x = setInterval(function() {
                   var now = new Date().getTime();
@@ -853,14 +849,14 @@
           </div>
           <br>
           <ul id="myUL" class = "bye"> 
-            <li class = "bye">1. Daughter: Madeline Law<br><br><a href="tel:98588226" class="button1729" id="shut2"><i class="fa fa-phone"></i>9858 8226</a></li><br>
-            <li class = "bye">2. Son: James Law<br><br><a href="tel:66933969" class="button1729" id="shut2"><i class="fa fa-phone"></i>6693 3969</a></li><br>
-            <li class = "bye">3. Care Giver: Mrs Anne<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><br><!-- JEFFREY -->
-            <li class = "bye">4. Friend: Evelyn Wang<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><br><!-- JEFFREY -->
-            <li class = "bye">5. Friend: Chen Gang<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><br><!-- JEFFREY -->
-            <li class = "bye">6. Friend: Neville Logan<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><br><!-- JEFFREY -->
-            <li class="bye">7. Colleague: Nick Fang<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><br><!-- JEFFREY -->
-            <li class="bye">8. Colleague: Dave Wallace<br><br><a href="tel:60733637" class="button1729" id="shut2"><i class="fa fa-phone"></i>6073 3637</a></li><br><!-- JEFFREY -->
+            <li class = "bye">1. Daughter: Madeline Law<br><br><a href="tel:25470766" class="button1729" id="shut2"><i class="fa fa-phone"></i>2547 0766</a></li><br>
+            <li class = "bye">2. Son: James Law<br><br><a href="tel:25470766" class="button1729" id="shut2"><i class="fa fa-phone"></i>2547 0766</a></li><br>
+            <li class = "bye">3. Care Giver: Mrs Anne<br><br><a href="tel:25470766" class="button1729" id="shut2"><i class="fa fa-phone"></i>2547 0766</a></li><br>
+            <li class = "bye">4. Friend: Evelyn Wang<br><br><a href="tel:25470766" class="button1729" id="shut2"><i class="fa fa-phone"></i>2547 0766</a></li><br>
+            <li class = "bye">5. Friend: Chen Gang<br><br><a href="tel:25470766" class="button1729" id="shut2"><i class="fa fa-phone"></i>2547 0766</a></li><br>
+            <li class = "bye">6. Friend: Neville Logan<br><br><a href="tel:25470766" class="button1729" id="shut2"><i class="fa fa-phone"></i>2547 0766</a></li><br>
+            <li class="bye">7. Colleague: Nick Fang<br><br><a href="tel:25470766" class="button1729" id="shut2"><i class="fa fa-phone"></i>2547 0766</a></li><br>
+            <li class="bye">8. Colleague: Dave Wallace<br><br><a href="tel:25470766" class="button1729" id="shut2"><i class="fa fa-phone"></i>2547 0766</a></li><br>
           </ul>
           <br>
         </div>
@@ -950,7 +946,7 @@
             </div>
         </div>
         <div role="main" class="ui-content">
-            <h1> <span style="color: #59B3C2;">Project Health</span></h1>
+            <h1> <span style="color: #59B3C2;">Health++</span></h1>
             <hr/>
             <p> <strong>TEAM ASCLEPIUS</strong> </p> 
             <br/>
@@ -959,7 +955,7 @@
             <p> <strong>Annie Lee</strong> </p> 
             <br/>
             <ul>
-            <li>Project Health's video editor and designer.</li>
+            <li>Health++'s video editor and designer.</li>
             <li>Is passionate about Economics, aspires to work at an iBank</li>
             <li>A mathematical talent unconditionally accepted to Cambridge 1 year in advance to major in Economics.</li>
             </ul>
@@ -967,7 +963,7 @@
             <p> <strong>Choi Ching Lam</strong> </p> 
             <br/>
             <ul>
-            <li>Project Health's idea creator and developer for the Project Health application.</li>
+            <li>Health++'s idea creator and developer for the Health++ application.</li>
             <li>Is passionate about artificial intelligence, aspires to be a college Computer Science major at MIT, and go into academia.</li>
             <li>Github: https://github.com/chinglamchoi</li>
             </ul>
@@ -975,7 +971,7 @@
             <p> <strong>Miko Leung</strong> </p> 
             <br/>
             <ul>
-            <li>Project Health's video editor and designer.</li>
+            <li>Health++'s video editor and designer.</li>
             <li>Math enthusiast who is forever preoccupied with maths. Aspires to be a doctor who saves lives.</li>
             <li>Github: https://github.com/gflareon</li>
             </ul>
@@ -983,7 +979,7 @@
             <p> <strong>Minnie Chan</strong> </p> 
             <br/>
             <ul>
-            <li>Project Health's developer.</li>
+            <li>Health++'s developer.</li>
             <li>Passionate about Computer Science and programming.</li>
             <li>Aspires to attend MIT as a CS major.</li>
             </ul>
@@ -1241,7 +1237,7 @@
             </div>
         </div>
         <div role="main" class="ui-content" align="center">
-            <strong><h2 id="p2" align="center">Project Health</h2></strong>
+            <strong><h2 id="p2" align="center">Health++</h2></strong>
             <form id="form" action="https://formspree.io/projecthealthdgs@gmail.com" method="POST">
                 <h3>Contact Form</h3>
                 <hr/><br/>
@@ -1293,19 +1289,16 @@
             </div>
         </div>
         <div role="main" class="ui-content" align="left">
-            <strong><h2 id="p2" align="left">Project Health</h2></strong>
+            <strong><h2 id="p2" align="left">Health++</h2></strong>
             <hr/>
             <h3><strong>Credits</strong></h3>
             <br/>
             <label>
             Shout Outs:
             </label>
-            <ul>
-                <li>Brian Tang, our regional ambassador who never holds back on giving us valuable resources.</li>
-                <li>Tony Ngan, our mentor and AI expert who's willing to answer even our most idiotic questions.</li>
+            <ul> <!-- update! -->
                 <li>Mrs CP Ho, our school IT teacher who gave valuable insights about our app idea.</li>
                 <li>Jeffrey Hui, our AI and maths expert who freely gave away hours of his time.</li>
-                <li>Professor Wayne Brehaut, Mr Zarreen Naowal Reza, our mentors who kindly accepted our group invitations. </li>
             </ul>
             <br/>
             <label>
@@ -1324,20 +1317,7 @@
                 </li>
             </ul>
             <br/>
-            <label>
-                Convolutional Neural Network:
-            </label>
             <ul>
-                <li>
-                    <a href="https://www.coursera.org/">
-                        Coursera
-                    </a> 
-                </li>
-                <li>
-                    <a href="https://isic-archive.com/">
-                        ISIC Archive
-                    </a>
-                </li>
                 <li>
                     <a href="https://stackoverflow.com/">
                         Stack Overflow
@@ -1349,13 +1329,8 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.mathworks.com/">
-                        Math Works
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.kaggle.com/">
-                        Kaggle
+                    <a href="https://www.github.com/">
+                        Github
                     </a>
                 </li>
             </ul>
@@ -1386,14 +1361,14 @@
             </div>
         </div>
         <div role="main" class="ui-content" align="center">
-            <strong><h2 id="p2" align="center">Project Health</h2></strong>
+            <strong><h2 id="p2" align="center">Health++</h2></strong>
             <hr/>
             <h3>
                 <bold>Terms of Service</bold>
             </h3>
             <h4>OVERVIEW</h4>
     <br/>
-    <p>This website is operated by Team Asclepius. Throughout the site, the terms “we”, “us” and “our” refer to Team Asclepius. Project Health offers this website, including all information, tools and services available from this site to you, the user, conditioned upon your acceptance of all terms, conditions, policies and notices stated here.</p>
+    <p>This website is operated by Team Asclepius. Throughout the site, the terms “we”, “us” and “our” refer to Team Asclepius. Health++ offers this website, including all information, tools and services available from this site to you, the user, conditioned upon your acceptance of all terms, conditions, policies and notices stated here.</p>
     <br/>
     <p>By visiting our site, you engage in our “Service” and agree to be bound by the following terms and conditions (“Terms of Service”, “Terms”), including those additional terms and conditions and policies referenced herein and/or available by hyperlink. These Terms of Service apply  to all users of the site, including without limitation users who are browsers, vendors, customers, merchants, and/ or contributors of content.</p>
     <br/>
@@ -1417,7 +1392,7 @@
     <br/>
     <p>You understand that your content, may be transferred unencrypted and involve (a) transmissions over various networks; and (b) changes to conform and adapt to technical requirements of connecting networks or devices. Credit card information is always encrypted during transfer over networks.</p>
     <br/>
-    <p>You agree not to reproduce, duplicate, copy, sell, resell or exploit any portion of the Project Health, use of the Project Health, or access to the Service or any contact on the website through which the service is provided, without express written permission by us.</p>
+    <p>You agree not to reproduce, duplicate, copy, sell, resell or exploit any portion of the Health++, use of the Health++, or access to the Service or any contact on the website through which the service is provided, without express written permission by us.</p>
     <br/>
     <p>The headings used in this agreement are included for convenience only and will not limit or otherwise affect these Terms.</p>
     <br/>
@@ -1469,7 +1444,7 @@
     <br/>
     <p>Your submission of personal information through the store is governed by our Privacy Policy. To view our Privacy Policy.</p>
     <br/>
-    <p>By continuing to use services provided by the Project Health, you consent to us proccessing personally identifiable information, including but not limited to email addresses, through third-party platforms such as "Formspree". Your information will not be used by such third parties in any way, except to perform the functionality of services offered by the Team Asclepius.</p>
+    <p>By continuing to use services provided by the Health++, you consent to us proccessing personally identifiable information, including but not limited to email addresses, through third-party platforms such as "Formspree". Your information will not be used by such third parties in any way, except to perform the functionality of services offered by the Team Asclepius.</p>
     <br/>
     <br/>
                 <p>SECTION 9 - ERRORS, INACCURACIES AND OMISSIONS</p>
@@ -1495,13 +1470,13 @@
     <br/>
     <p>You expressly agree that your use of, or inability to use, the service is at your sole risk. The service and all products and services delivered to you through the service are (except as expressly stated by us) provided 'as is' and 'as available' for your use, without any representation, warranties or conditions of any kind, either express or implied, including all implied warranties or conditions of merchantability, merchantable quality, fitness for a particular purpose, durability, title, and non-infringement.</p>
     <br/>
-    <p>In no case shall Project Health, affiliates, suppliers, service providers or licensors be liable for any injury, loss, claim, or any direct, indirect, incidental, punitive, special, or consequential damages of any kind, including, without limitation lost profits, loss of data, or any similar damages, whether based in contract, tort (including negligence), strict liability or otherwise, arising from your use of any of the service or any products procured using the service, or for any other claim related in any way to your use of the service or any product, including, but not limited to, any errors or omissions in any content, or any loss or damage of any kind incurred as a result of the use of the service or any content (or product) posted, transmitted, or otherwise made available via the service, even if advised of their possibility. Because some states or jurisdictions do not allow the exclusion or the limitation of liability for consequential or incidental damages, in such states or jurisdictions, our liability shall be limited to the maximum extent permitted by law.</p>
+    <p>In no case shall Health++, affiliates, suppliers, service providers or licensors be liable for any injury, loss, claim, or any direct, indirect, incidental, punitive, special, or consequential damages of any kind, including, without limitation lost profits, loss of data, or any similar damages, whether based in contract, tort (including negligence), strict liability or otherwise, arising from your use of any of the service or any products procured using the service, or for any other claim related in any way to your use of the service or any product, including, but not limited to, any errors or omissions in any content, or any loss or damage of any kind incurred as a result of the use of the service or any content (or product) posted, transmitted, or otherwise made available via the service, even if advised of their possibility. Because some states or jurisdictions do not allow the exclusion or the limitation of liability for consequential or incidental damages, in such states or jurisdictions, our liability shall be limited to the maximum extent permitted by law.</p>
     <br/>
     <br/>
     <br/>
                 <p>SECTION 12 - INDEMNIFICATION</p>
     <br/>
-    <p>You agree to indemnify, defend and hold harmless Project Health and our parent, subsidiaries, affiliates, partners, officers, directors, agents, contractors, licensors, service providers, subcontractors, suppliers, interns and employees, harmless from any claim or demand, including reasonable attorneys’ fees, made by any third-party due to or arising out of your breach of these Terms of Service or the documents they incorporate by reference, or your violation of any law or the rights of a third-party.</p>
+    <p>You agree to indemnify, defend and hold harmless Health++ and our parent, subsidiaries, affiliates, partners, officers, directors, agents, contractors, licensors, service providers, subcontractors, suppliers, interns and employees, harmless from any claim or demand, including reasonable attorneys’ fees, made by any third-party due to or arising out of your breach of these Terms of Service or the documents they incorporate by reference, or your violation of any law or the rights of a third-party.</p>
     <br/>
     <br/>
                 <p>SECTION 13 - SEVERABILITY</p>
@@ -1571,7 +1546,7 @@
             </div>
         </div>
         <div role="main" class="ui-content" align="left">
-            <strong><h2 id="p2" align="left">Project Health</h2></strong>
+            <strong><h2 id="p2" align="left">Health++</h2></strong>
             <hr/>
             <h3>
                 <strong>Privacy Policy</strong>
@@ -1621,7 +1596,7 @@
 
                 <strong>Third-party disclosure </strong>
 <br/>
-<p>By continuing to use services provided by the Project Health, you consent to us proccessing personally identifiable information, including but not limited to email addresses, through third-party platforms such as "Formspree". Your information will not be used by such third parties in any way, except to perform the functionality of services offered by the Team Asclepius.</p> 
+<p>By continuing to use services provided by the Health++, you consent to us proccessing personally identifiable information, including but not limited to email addresses, through third-party platforms such as "Formspree". Your information will not be used by such third parties in any way, except to perform the functionality of services offered by the Team Asclepius.</p> 
 <br/>
     <strong>Google </strong>
 <br/>
